# staticpublicsuffix

./: Cargo.toml  LICENSE
src/: lib.rs
